# BMX

./: .dockerignore  .gitignore  .slugignore  Cargo.toml  Dockerfile  LICENCE-COMMERCIALE.md  LICENSE  README.md  app.json  build.ts  deploy.sh  dev.ts  env.d.ts  heroku.yml  index.html  package.json  render.yaml  server.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  deploy-heroku.sh  heroku.yml
backend/api/: Cargo.toml
backend/api/examples/: genvapid.rs
backend/api/src/: auth.rs  billing.rs  cli.rs  errors.rs  main.rs  push.rs
backend/api/src/handlers/: accounts.rs  admin.rs  artworks.rs  billing.rs  contests.rs  featured.rs  health.rs  marketplace.rs  media.rs  messages.rs  mod.rs  news.rs  parts.rs  polls.rs  push.rs  riders.rs  sessions.rs  shops.rs  sounds.rs  spots.rs  videos.rs
backend/api/src/importers/: mod.rs  theboardr.rs  youtube.rs
backend/entity/: Cargo.toml
backend/entity/src/: artwork.rs  bmx_session.rs  contest.rs  contest_entry.rs  contest_vote.rs  featured_account.rs  lib.rs  listing.rs  media.rs  message.rs  news_article.rs  offer.rs  part.rs  poll.rs  poll_option.rs  poll_vote.rs  push_subscription.rs  rider.rs  rider_rating.rs  session_member.rs  shop.rs  sound.rs  spot.rs  user.rs  video.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260101_000001_init.rs  m20260101_000002_seed.rs  m20260101_000003_media.rs  m20260101_000004_import.rs  m20260101_000005_billing.rs  m20260101_000006_spot_photos.rs  m20260101_000007_messages.rs  m20260101_000008_push_subscriptions.rs  m20260101_000009_marketplace.rs  m20260101_000010_seed_shops.rs
ios/: README.md
ios/Bmx/: API.swift  AccountView.swift  AuthStore.swift  BmxApp.swift  FeedView.swift  Info.plist  Keychain.swift  RootView.swift  Theme.swift
ios/Bmx.xcodeproj/: project.pbxproj
ios/Bmx/Assets.xcassets/AccentColor.colorset/: Contents.json
public/: 404.html  offline.html  robots.txt  site.webmanifest  sw.js
scripts/: gen_icons.py  gen_logo.py  process_logo.py
src/: App.css  App.tsx  App.vue  api.ts  auth.ts  auth.tsx  env.d.ts  hooks.ts  i18n.ts  i18n.tsx  index.css  main.ts  main.tsx  ui.ts  ui.tsx
src/components/: Avatar.tsx  Avatar.vue  AvatarEditor.tsx  AvatarEditor.vue  Bike3D.vue  Community.tsx  Community.vue  Contact.tsx  Contact.vue  CrewScreen.vue  Deck.tsx  Deck3D.tsx  Footer.tsx  Footer.vue  Hero.tsx  Hero.vue  HeroBoard.tsx  InstallPrompt.tsx  InstallPrompt.vue  Join.tsx  Join.vue  LangSwitcher.tsx  LangSwitcher.vue  Manifesto.tsx  Manifesto.vue  MarketScreen.vue  Marquee.tsx  Marquee.vue  Messages.tsx  Messages.vue  MessagesConversationList.vue  MessagesScreen.vue  MessagesThread.vue  Nav.tsx  Nav.vue  NotificationToggle.tsx  NotificationToggle.vue  ProfileModal.tsx  ProfileModal.vue  ProfileScreen.vue  (+16 more)
src/components/admin/: AdminDashboard.tsx  AdminDashboard.vue  admin.css
src/components/community/: Account.tsx  Account.vue  AuthForm.vue  Marketplace.tsx  Marketplace.vue  MarketplaceListingDetail.vue  MarketplaceListingForm.vue  MarketplaceOfferForm.vue  MarketplaceOwnerPanel.vue  Parts.tsx  Parts.vue  Polls.tsx  Polls.vue  Premium.vue  RiderPhoto.vue  Riders.tsx  Riders.vue  Sessions.tsx  Sessions.vue  Shops.tsx  Shops.vue  Spots.tsx  Spots.vue  UploadPart.vue  Videos.tsx  Videos.vue  community.css
src/components/pages/: About.tsx  About.vue  Legal.tsx  Legal.vue  Press.tsx  Press.vue  pages.css
src/composables/: pwa.ts
src/lib/: image.ts  push.ts  search.ts
src/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  pt.ts  zh.ts
