[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
entity    = { path = "../entity" }
migration = { path = "../migration" }

actix-web         = { workspace = true }
actix-files       = { workspace = true }
actix-cors        = { workspace = true }
tracing-actix-web = { workspace = true }

sea-orm = { workspace = true }

argon2       = { workspace = true }
jsonwebtoken = { workspace = true }
validator    = { workspace = true }
ammonia      = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
rust_decimal = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dotenvy      = { workspace = true }
rand         = { workspace = true }
reqwest      = { workspace = true }
regex        = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
web-push-native = { workspace = true }
base64ct        = { workspace = true }
