[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sea-orm      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
rust_decimal = { workspace = true }
