[package]
name = "migration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { workspace = true }
tokio            = { workspace = true }
async-trait      = { workspace = true }
